Actions
Bug #10722
closedrdsib: NULL pointer errors
Start date:
2019-04-10
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
NULL pointer errors:
../../common/io/ib/clients/rds/rdsib_buf.c: In function 'rds_free_send_pool' : ../../common/io/ib/clients/rds/rdsib_buf.c:372:20: error: assignment makes i nteger from pointer without a cast [-Werror=int-conversion] ep->ep_ack_addr = NULL; ^ In file included from ../../common/sys/param.h:48:0, from ../../common/sys/t_lock.h:38, from ../../common/sys/map.h:35, from ../../common/sys/ddi.h:37, from ../../common/sys/ib/ibtl/ibtl_types.h:35, from ../../common/sys/ib/ibtl/ibti_common.h:37, from ../../common/sys/ib/ibtl/ibti.h:34, from ../../common/sys/ib/clients/rds/rdsib_ib.h:83, from ../../common/io/ib/clients/rds/rdsib_buf.c:76: ../../common/io/ib/clients/rds/rdsib_buf.c: In function 'rds_init_send_pool' : ../../common/sys/null.h:32:14: error: initialization makes integer from poin ter without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/io/ib/clients/rds/rdsib_buf.c:395:23: note: in expansion of mac ro 'NULL' uintptr_t ack_addr = NULL; ^~~~ ../../common/io/ib/clients/rds/rdsib_buf.c:486:16: error: comparison between pointer and integer [-Werror] if (ack_addr != NULL) ^~ ../../common/io/ib/clients/rds/rdsib_buf.c: In function 'rds_reinit_send_poo l': ../../common/io/ib/clients/rds/rdsib_buf.c:591:19: error: assignment makes i nteger from pointer without a cast [-Werror=int-conversion] ep->ep_hca_guid = NULL; ^ ../../common/io/ib/clients/rds/rdsib_ep.c: In function 'rds_ep_init': ../../common/io/ib/clients/rds/rdsib_ep.c:402:16: error: assignment makes in teger from pointer without a cast [-Werror=int-conversion] ep->ep_lbufid = NULL; ^ ../../common/io/ib/clients/rds/rdsib_ep.c:403:16: error: assignment makes in teger from pointer without a cast [-Werror=int-conversion] ep->ep_rbufid = NULL; ^ ../../common/io/ib/clients/rds/rdsib_ep.c:414:42: error: assignment makes in teger from pointer without a cast [-Werror=int-conversion] ep->ep_ackwr.wr.rc.rcwr.rdma.rdma_raddr = NULL; ^ ../../common/io/ib/clients/rds/rdsib_ep.c: In function 'rds_session_reinit': ../../common/io/ib/clients/rds/rdsib_ep.c:535:37: error: comparison between pointer and integer [-Werror] if (sp->session_dataep.ep_ack_addr == NULL) { ^~ ../../common/io/ib/clients/rds/rdsib_ep.c: In function 'rds_resend_messages': ../../common/io/ib/clients/rds/rdsib_ep.c:1764:20: error: comparison between pointer and integer [-Werror] if (ep->ep_lbufid == NULL) { ^~ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit accc298111fac9235e2da8bc29e5447a704f03d3
commit accc298111fac9235e2da8bc29e5447a704f03d3 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-22T20:13:01.000Z 10722 rdsib: NULL pointer errors Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions